tests/baselines/reference/assignmentCompatWithCallSignatures2.errors.txt
==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithCallSignatures2.ts (12 errors) ====
    // void returning call signatures can be assigned a non-void returning call signature that otherwise matches
    
    interface T {
        f(x: number): void;
    }
    var t: T;
    var a: { f(x: number): void };
    
    t = a;
    a = t;
    
    interface S {
        f(x: number): string;
    }
    var s: S;
    var a2: { f(x: number): string };
    t = s;
    t = a2;
    a = s;
    a = a2;
    
    t = { f: () => 1 };
    t = { f: <T>(x:T) => 1 };
    t = { f: function f() { return 1 } };
    t = { f(x: number) { return ''; } }
    a = { f: () => 1 }
    a = { f: <T>(x: T) => 1 };
    a = { f: function (x: number) { return ''; } }
    
    // errors
    t = () => 1;
    ~
!!! error TS2322: Type '() => number' is not assignable to type 'T':
!!! error TS2322:   Property 'f' is missing in type '() => number'.
    t = function (x: number) { return ''; }
    ~
!!! error TS2322: Type '(x: number) => string' is not assignable to type 'T':
!!! error TS2322:   Property 'f' is missing in type '(x: number) => string'.
    a = () => 1;
    ~
!!! error TS2322: Type '() => number' is not assignable to type '{ f(x: number): void; }':
!!! error TS2322:   Property 'f' is missing in type '() => number'.
    a = function (x: number) { return ''; }
    ~
!!! error TS2322: Type '(x: number) => string' is not assignable to type '{ f(x: number): void; }':
!!! error TS2322:   Property 'f' is missing in type '(x: number) => string'.
    
    interface S2 {
        f(x: string): void;
    }
    var s2: S2;
    var a3: { f(x: string): void };
    // these are errors
    t = s2;
    ~
!!! error TS2322: Type 'S2' is not assignable to type 'T':
!!! error TS2322:   Types of property 'f' are incompatible:
!!! error TS2322:     Type '(x: string) => void' is not assignable to type '(x: number) => void':
!!! error TS2322:       Types of parameters 'x' and 'x' are incompatible:
!!! error TS2322:         Type 'string' is not assignable to type 'number'.
    t = a3;
    ~
!!! error TS2322: Type '{ f(x: string): void; }' is not assignable to type 'T':
!!! error TS2322:   Types of property 'f' are incompatible:
!!! error TS2322:     Type '(x: string) => void' is not assignable to type '(x: number) => void':
!!! error TS2322:       Types of parameters 'x' and 'x' are incompatible:
!!! error TS2322:         Type 'string' is not assignable to type 'number'.
    t = (x: string) => 1;
    ~
!!! error TS2322: Type '(x: string) => number' is not assignable to type 'T':
!!! error TS2322:   Property 'f' is missing in type '(x: string) => number'.
    t = function (x: string) { return ''; }
    ~
!!! error TS2322: Type '(x: string) => string' is not assignable to type 'T':
!!! error TS2322:   Property 'f' is missing in type '(x: string) => string'.
    a = s2;
    ~
!!! error TS2322: Type 'S2' is not assignable to type '{ f(x: number): void; }':
!!! error TS2322:   Types of property 'f' are incompatible:
!!! error TS2322:     Type '(x: string) => void' is not assignable to type '(x: number) => void':
!!! error TS2322:       Types of parameters 'x' and 'x' are incompatible:
!!! error TS2322:         Type 'string' is not assignable to type 'number'.
    a = a3;
    ~
!!! error TS2322: Type '{ f(x: string): void; }' is not assignable to type '{ f(x: number): void; }':
!!! error TS2322:   Types of property 'f' are incompatible:
!!! error TS2322:     Type '(x: string) => void' is not assignable to type '(x: number) => void':
!!! error TS2322:       Types of parameters 'x' and 'x' are incompatible:
!!! error TS2322:         Type 'string' is not assignable to type 'number'.
    a = (x: string) => 1;
    ~
!!! error TS2322: Type '(x: string) => number' is not assignable to type '{ f(x: number): void; }':
!!! error TS2322:   Property 'f' is missing in type '(x: string) => number'.
    a = function (x: string) { return ''; }
    ~
!!! error TS2322: Type '(x: string) => string' is not assignable to type '{ f(x: number): void; }':
!!! error TS2322:   Property 'f' is missing in type '(x: string) => string'.
    